<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_InfMyCampaign"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_MyCampaign" />
        <item
            android:id="@+id/nav_InfNotifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_InfSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_FAQ"
                android:icon="@drawable/ic_faq"
                android:title="@string/activity_title_faq" />
            <item
                android:id="@+id/nav_PrivacyPolicy"
                android:icon="@drawable/ic_private"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_ContactUs"
                android:icon="@drawable/ic_contact"
                android:title="@string/activity_title_contact_us" />
            <item
                android:id="@+id/nav_AboutUs"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_about_us" />
        </menu>
    </item>
</menu>
